--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
     <div style = "display: grid; text-align: center;" class = "col-md-8">
         <a href="{% url 'detail' article.id %}">{{ article.title }}</a>
-        <img src="{{ article.upload_img }}">
+        <img src="{{ MEDIA_URL }}{{ article.upload_img }}">
     </div>
 
 {% endfor %}
