--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,4 +2,4 @@
 <p>{{ article.title }}</p>
 <p>{{ article.description }}</p>
 <p>{{ article.price }}</p>
-<img src="/{{ article.upload_img }}">
+<img src="{{ MEDIA_URL }}{{ article.upload_img }}">
